force-app/main/default/objects/AMC_Invoice_Tracker__c/AMC_Invoice_Tracker__c.object-meta.xml
<CustomObject>
    <label>AMC Invoice Tracker</label>
    <nameField>
        <label>AMC Invoice Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AMC Invoice Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>