force-app/main/default/objects/AMC_Invoice_Tracker__c/fields/Invoice_no__c.field-meta.xml
<CustomField>
    <fullName>Invoice_no__c</fullName>
    <label>Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>