force-app/main/default/objects/AMC_Invoice_Tracker__c/fields/Invoice_Submitted_Time__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Submitted_Time__c</fullName>
    <label>Invoice Submitted Time</label>
    <type>DateTime</type>
</CustomField>