force-app/main/default/objects/AMC_Invoice_Tracker__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAMC</fullName>
            </value>
            <value>
                <fullName>NCAMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>